Css fix: al escalar, ocultar el overflow-y

--- a/mangafront/src/app/account/account.component.css
+++ b/mangafront/src/app/account/account.component.css
@@ -40,6 +40,7 @@
   position: relative;
   display: flex; 
   overflow-x: scroll;
+  overflow-y: hidden;
   width: 100%;
   flex-wrap: nowrap;
   gap: 2rem;
